# EmbeddedMath

./: CMakeLists.txt  EmbeddedLie.hpp  EmbeddedMath.hpp  README.md
docs/: README.zh_CN.md
docs/impl_details/: CoreType.md  MatrixDecomp.md
test/: CMakeLists.txt  test_benchmark.cpp  test_decomp.cpp  test_eigen.cpp  test_matrix.cpp  test_quaternion.cpp
